# cpp_labs

./: CMakeLists.txt
lab1/: README.md  function.cpp  generator.cpp
lab2/: README.md  constructor_log.txt  customClass.hpp  main.cpp
lab3/: README.md  customClass.cpp  customClass.hpp  main.cpp
lab4/: README.md  main.cpp
