cmake_minimum_required(VERSION 3.26)
project(cpp_labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_labs main.cpp
        lab2/customClass.cpp
        lab2/main.cpp
        lab2/customClass.h
        lab2/customClass.hpp
        lab3/customClass.hpp
        lab3/customClass.hpp
        lab3/task1.cpp
        lab3/task2.cpp
        lab4/main.cpp)
